fix on mobile menu

--- a/assets/scss/component/_nav.scss
+++ b/assets/scss/component/_nav.scss
@@ -187,7 +187,7 @@
     }
 
     &__mobile {
-        display: flex;
+        display: none;
         position: absolute;
         top: 100px;
         left: 12px;
